fixed the positioning of the H1 in the nav as it was hanging too low.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0%;
     padding: 0%;
+
 }
 
 #about-me, #work, #contact{
@@ -23,9 +24,13 @@ header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    height:40px;
+    display: flex;
 }
 header h1 {    
     font-size: 36px;
+    position: relative;
+    top: -20px;
 }
 
 header nav ul {
@@ -37,8 +42,9 @@ header nav{
 }
 
 header nav ul li {
-    display: inline-block;
+   position: relative;
     margin-left: 25px;
+    
     
 }
 
@@ -48,6 +54,11 @@ header{
     
 }
 
+
+.subtitle h2{
+    padding-top: 0px;
+    margin-top:0px;
+}
 
 .projects{
     display: grid;
@@ -152,3 +163,4 @@ ul{
     border-left: 5px solid black;
     padding-left: 20px;
 }
+
